loaves/compiler/incan_emit/tests/snapshots/codegen_snapshot_tests__assignments.snap
---
source: tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_std_core::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
fn test_basic_assignments() {
    let _x: i64 = 42;
    let _y: String = "hello".to_string();
    let _z: bool = true;
    let mut a: i64 = 1;
    let mut b: i64 = 2;
    let temp: i64 = a;
    a = b;
    b = temp;
}
fn test_augmented_assignments() {
    let mut x: i64 = 10;
    x = x + 5;
    x = x - 3;
    x = x * 2;
    x = incan_std_core::num::py_mod_i64(x, 4);
    let mut xf: f64 = 24.0;
    xf = incan_std_core::num::py_div(xf, (4) as f64);
    let mut s: String = "hello".to_string();
    s = incan_std_core::strings::str_concat(&s, &" world");
}
fn test_collection_assignments() {
    let mut numbers: Vec<i64> = vec![1, 2, 3, 4];
    *incan_std_core::collections::list_get_mut(&mut numbers, (0) as i64) = 10;
    *incan_std_core::collections::list_get_mut(&mut numbers, (-1) as i64) = 40;
    let mut data: std::collections::HashMap<String, i64> = [("a".to_string(), 1)]
        .into_iter()
        .collect::<std::collections::HashMap<_, _>>();
    data.insert("b".to_string(), 2);
    data.insert("a".to_string(), 10);
}
fn test_multiple_targets() {
    let value: i64 = 5;
    let mut x: i64 = value;
    let mut y: i64 = value;
    let mut z: i64 = value;
    let __incan_chain_value = 5;
    x = __incan_chain_value;
    y = __incan_chain_value;
    z = __incan_chain_value;
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let _ = test_basic_assignments();
    let _ = test_augmented_assignments();
    let _ = test_collection_assignments();
    let _ = test_multiple_targets();
}
