loaves/compiler/incan_emit/tests/snapshots/codegen_snapshot_tests__const_bytes.snap
---
source: tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_std_core::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
const RAW: &'static [u8] = b"\0\x01";
const FROZEN: incan_std_core::frozen::FrozenBytes = incan_std_core::frozen::FrozenBytes::new(
    b"\x02\x03",
);
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let _ = println!("{}", ::std::convert::identity(RAW.len() as i64));
    let _ = println!("{}", ::std::convert::identity(FROZEN.len() as i64));
}
