loaves/compiler/incan_emit/tests/snapshots/codegen_snapshot_tests__constructor_field_defaults.snap
---
source: tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_std_core::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
#[derive(Debug, Clone, incan_derive::FieldInfo, incan_derive::IncanClass)]
struct Settings {
    theme: String,
    font_size: i64,
    auto_save: bool,
}
impl incan_std_core::reflection::HasClassName for Settings {
    fn __class_name__(&self) -> &'static str {
        <Self as incan_std_core::reflection::HasTypeClassName>::__class_name__()
    }
}
impl incan_std_core::reflection::HasTypeClassName for Settings {
    fn __class_name__() -> &'static str {
        "Settings"
    }
}
impl incan_std_core::reflection::HasFieldMetadata for Settings {
    fn __fields__(
        &self,
    ) -> incan_std_core::frozen::FrozenList<incan_std_core::reflection::FieldInfo> {
        <Self as incan_std_core::reflection::HasTypeFieldMetadata>::__fields__()
    }
}
impl incan_std_core::reflection::HasTypeFieldMetadata for Settings {
    fn __fields__() -> incan_std_core::frozen::FrozenList<
        incan_std_core::reflection::FieldInfo,
    > {
        static __INCAN_FIELDS: [incan_std_core::reflection::FieldInfo; 3] = [
            incan_std_core::reflection::FieldInfo {
                name: incan_std_core::frozen::FrozenStr::new("theme"),
                alias: None,
                description: None,
                wire_name: incan_std_core::frozen::FrozenStr::new("theme"),
                type_name: incan_std_core::frozen::FrozenStr::new("str"),
                has_default: true,
                extra: incan_std_core::frozen::FrozenDict::new(&[]),
            },
            incan_std_core::reflection::FieldInfo {
                name: incan_std_core::frozen::FrozenStr::new("font_size"),
                alias: None,
                description: None,
                wire_name: incan_std_core::frozen::FrozenStr::new("font_size"),
                type_name: incan_std_core::frozen::FrozenStr::new("int"),
                has_default: true,
                extra: incan_std_core::frozen::FrozenDict::new(&[]),
            },
            incan_std_core::reflection::FieldInfo {
                name: incan_std_core::frozen::FrozenStr::new("auto_save"),
                alias: None,
                description: None,
                wire_name: incan_std_core::frozen::FrozenStr::new("auto_save"),
                type_name: incan_std_core::frozen::FrozenStr::new("bool"),
                has_default: true,
                extra: incan_std_core::frozen::FrozenDict::new(&[]),
            },
        ];
        incan_std_core::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
impl incan_std_core::reflection::HasFieldValueReflection for Settings {
    fn __field_value__(&self, name: &str) -> Option<String> {
        match name {
            "theme" => Some(format!("{}", self.theme)),
            "font_size" => Some(format!("{}", self.font_size)),
            "auto_save" => Some(format!("{}", self.auto_save)),
            _ => None,
        }
    }
    fn __field_items__(&self) -> Vec<(String, String)> {
        vec![
            ("theme".to_string(), format!("{}", self.theme)), ("font_size".to_string(),
            format!("{}", self.font_size)), ("auto_save".to_string(), format!("{}", self
            .auto_save))
        ]
    }
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let a = Settings {
        theme: "dark".to_string(),
        font_size: 14,
        auto_save: true,
    };
    let b = Settings {
        theme: "dark".to_string(),
        font_size: 16,
        auto_save: true,
    };
    let _ = println!(
        "{}", { let __parts : [& str; 3usize] = ["", " ", ""]; let __args : Vec < String
        > = vec![format!("{}", a.theme), format!("{}", b.font_size)];
        incan_std_core::strings::fstring(& __parts, & __args) }
    );
}
